==> nhan123iddkw23/STM/STM32_Toturial/Lora/Lora_STM32F103C8T6/LoRa.c <==
#include "LoRa.h"
#include "delay.h"

void LoRa_reset(LoRa* _LoRa){
	GPIO_WriteBit(_LoRa->reset_port, _LoRa->reset_pin, 0);
	Delay_ms(1);
	GPIO_WriteBit(_LoRa->reset_port, _LoRa->reset_pin, 1);
	Delay_ms(100);
}

void LoRa_readReg(LoRa* _LoRa, uint8_t* address, uint16_t r_length, uint8_t* output, uint16_t w_length){
	GPIO_WriteBit(_LoRa->CS_port, _LoRa->CS_pin, 0);
	SPI_I2S_SendData(_LoRa->hSPIx, address);
	while (SPI_I2S_GetFlagStatus(_LoRa->hSPIx,SPI_I2S_FLAG_TXE) != RESET);
	output = SPI_I2S_ReceiveData(_LoRa->hSPIx);
	while (SPI_I2S_GetFlagStatus(_LoRa->hSPIx,SPI_I2S_FLAG_RXNE) != RESET);
	GPIO_WriteBit(_LoRa->CS_port, _LoRa->CS_pin, 1);
}

void LoRa_writeReg(LoRa* _LoRa, uint8_t* address, uint16_t r_length, uint8_t* values, uint16_t w_length){
	GPIO_WriteBit(_LoRa->CS_port, _LoRa->CS_pin, 0);
	SPI_I2S_SendData(_LoRa->hSPIx, address);
	while (SPI_I2S_GetFlagStatus(_LoRa->hSPIx,SPI_I2S_FLAG_TXE) != RESET);
	SPI_I2S_SendData(_LoRa->hSPIx, values);
	while (SPI_I2S_GetFlagStatus(_LoRa->hSPIx,SPI_I2S_FLAG_RXNE) != RESET);
	GPIO_WriteBit(_LoRa->CS_port, _LoRa->CS_pin, 1);
}

void LoRa_BurstWrite(LoRa* _LoRa, uint8_t address, uint8_t *value, uint8_t length){
	uint8_t addr;
	addr = address | 0x80;

	//NSS = 1
	GPIO_WriteBit(_LoRa->CS_port, _LoRa->CS_pin, 0);
	SPI_I2S_SendData(_LoRa->hSPIx, &addr);
	while (SPI_I2S_GetFlagStatus(_LoRa->hSPIx,SPI_I2S_FLAG_TXE) != RESET);
		
	//Write data in FiFo
	SPI_I2S_SendData(_LoRa->hSPIx, value);
	while (SPI_I2S_GetFlagStatus(_LoRa->hSPIx,SPI_I2S_FLAG_TXE) != RESET);
		;
	//NSS = 0
	//HAL_Delay(5);
	GPIO_WriteBit(_LoRa->CS_port, _LoRa->CS_pin, 1);
}
